--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                   <li><a target="_blank" href="https://github.com/aashish05" class="social-btn"><i class="fa fa-github"></i></a></li>
                   <li><a target="_blank" href="https://twitter.com/aashish0506" class="social-btn"><i class="fa fa-twitter"></i></a></li>
                   <li><a target="_blank" href="https://www.facebook.com/kumaraashish5j" class="social-btn"><i class="fa fa-facebook"></i></a></li>
-		  <li><a target="_blank" href="index.html#" class="social-btn"><i class="fa fa-linkedin"></i></a></li>
+		  <li><a target="_blank" href="https://www.linkedin.com/in/aashish-kumar-634820136" class="social-btn"><i class="fa fa-linkedin"></i></a></li>
 				  
                 </ul>
               </div>
