--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
 				<!-- about / welcome text -->
-                <p>An open source and tech enthusiast dedicated to solving real world's problem using technology. I have a experience of teamwork and leadership under versatile and robust environment. I m passionate about GNU/LINUX , cyber security & Web development</p>
+                <p>I'm an open-source tech enthousiast that's dedicated towards solving real problems using technological insights. I'm an experienced developer, having worked under versatile and robust environments. I'm passionate about GNU/LINUX, Cybersecurity & Web development.
+</p>
               </div>
             </div>
           </div>
@@ -134,7 +135,8 @@
                       <i class="fa fa-camera"></i><!-- Icon -->
                     </div>
                     <h2>Event Manager</h2><!-- Title -->
-                    <p>I designs and executes special occasions shaped to meet the client's style and personality. From large, branded corporate events to intimate weddings and everything in between, Me and my team provide unique insights that will make your big day unforgettable.</p><!-- Description -->
+                    <p>I plan and execute special occasions catered to meet the client's taste and personality. Ranging from large corporate events to intimate weddings, my team and I will do their utmost to share their unique insights and deliver you the event you deserve.
+</p><!-- Description -->
                   </div>
           <!-- Service Box 2 -->
                   <div class="col-md-4 wp2 item delay-05s">
@@ -142,7 +144,8 @@
                       <i class="fa fa-desktop"></i><!-- Icon -->
                     </div>
                     <h2>Web Designer</h2><!-- Title -->
-                    <p>Don’t let your website be just another URL on the web. We can help it be a powerful marketing medium to attract prospective customers. </p><!-- Description -->
+                    <p>Don’t let your website be just another URL on the web. We can help you design a website that makes you stand out, optimizing both aesthetics and SEO, we'll deliver you a website that will attract the audience you want.
+</p><!-- Description -->
                   </div>
           <!-- Service Box 3 -->
                   <div class="col-md-4 wp2 item delay-1s">
@@ -150,7 +153,8 @@
                       <i class="fa fa-cubes"></i><!-- Icon -->
                     </div>
                     <h2>Tech Speaker</h2><!-- Title -->
-                    <p>I love to teach people about different open source technology and organise workshop and training either offline or online for this purpose. i have taken session on Cyber Security, Web development and had addressed more than 1000+ audience till date. </p><!-- Description -->
+                    <p>Allow me to teach you about the vast and various open source technology that exist. With either online or offline workshops and training, i can share my insights on Cyber Security, Web development and other fields. I'm an experienced speaker, having addressed an small to big audiences composing out of more than 1000 people so far.
+</p><!-- Description -->
                   </div>
           </div>
                   <div class="clearfix"></div>
