--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <p>Made with <i class="fa fa-heart heart"></i> In India | &copy; 2018 .All Rights Reserved.</p>
+                <p>Made with <i class="fa fa-heart heart"></i> In India | &copy; 2018 All Rights Reserved.</p>
               </div>
             </div>
           </div>
